# MailIntelKit

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
src/email_security_check/: api.py  cli.py  core.py  dns_utils.py  models.py
src/scripts/: email_security_check.py
